fixed compiler problem in 10.10